--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ header{
     }
     
 } 
+@media screen and (max-width: 450px){
+    header{
+        padding: 0 30px;
+    }
+} 
 /*head part end*/
 body {
     /* background-color: rgb(124, 52, 52); */
